--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^0.19.7",
+    "@codemirror/legacy-modes": "^0.19.0",
     "@tailwindcss/forms": "^0.4.0",
     "@uiw/react-codemirror": "^4.3.3",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-collapse-pane": "^2.0.1",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.177",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
