--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@tailwindcss/forms": "^0.4.0",
     "@uiw/react-codemirror": "^4.3.3",
     "classnames": "^2.3.1",
+    "copy-to-clipboard": "^3.3.1",
+    "fuse.js": "^6.5.3",
     "react": "^17.0.2",
     "react-collapse-pane": "^2.0.1",
     "react-dom": "^17.0.2",
