--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "react": "^17.0.2",
     "react-collapse-pane": "^2.0.1",
     "react-dom": "^17.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "whatwg-mimetype": "^3.0.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.177",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/uuid": "^8.3.4",
+    "@types/whatwg-mimetype": "^2.1.1",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
