--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
     "fuse.js": "^6.5.3",
+    "jsesc": "^3.0.2",
     "react": "^17.0.2",
     "react-collapse-pane": "^2.0.1",
     "react-dom": "^17.0.2",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.177",
+    "@types/jsesc": "^3.0.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/uuid": "^8.3.4",
