--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore",
+    "fmt": "prettier --write . --ignore-path .gitignore"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^0.19.7",
@@ -28,9 +30,19 @@
     "@types/react-dom": "^17.0.10",
     "@types/uuid": "^8.3.4",
     "@types/whatwg-mimetype": "^2.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.18",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
