--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,5 +3,6 @@
   "description": "Chrome extension to generate code from HTTP requests",
   "version": "0.1.0",
   "manifest_version": 3,
-  "devtools_page": "devtool.html"
+  "devtools_page": "devtool.html",
+  "icons": { "256": "icon.png" }
 }
