--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^0.19.7",
+    "@codemirror/lang-python": "^0.19.4",
     "@codemirror/legacy-modes": "^0.19.0",
     "@tailwindcss/forms": "^0.4.0",
     "@uiw/react-codemirror": "^4.3.3",
